Added logic for only using one timestamp per particle

--- a/mi/platform/rsn/node_config_files/LPJBox_LJ0CI.yml
+++ b/mi/platform/rsn/node_config_files/LPJBox_LJ0CI.yml
@@ -2,13 +2,15 @@ node_meta_data:
     node_id_name: LPJBox_CI_Ben_Hall 
     description: Low Power Junction Box for CI Testing Ben Hall
     location: Ben Hall
-    node_type: LJBox
+    node_type: JBox
     reference_designator: LJ0CI
     num_instrument_ports: 4
     num_expansion_port: 0
-port_configs:
+    node_env_data_stream_name: LPJBox_CI_Ben_Hall_Eng_Data
+node_port_configuration:
     J05-IP1:
        port_name : J05-IP1
+       port_stream_name : LPJBox_CI_Ben_Hall_Port_J05-IP1
        port_ion_control : True
        port_type : InstrumetPort
        port_oms_prefix : Instrument Port 0
@@ -17,6 +19,7 @@ port_configs:
        port_oms_port_cntl_id : '0'
     J06-IP2:
        port_name : J06-IP2
+       port_stream_name : LPJBox_CI_Ben_Hall_Port_J06-IP2
        port_ion_control : True
        port_type : InstrumetPort
        port_oms_prefix : Instrument Port 1
@@ -25,6 +28,7 @@ port_configs:
        port_oms_port_cntl_id : '1'       
     J07-IP3:
        port_name : J07-IP3
+       port_stream_name : LPJBox_CI_Ben_Hall_Port_J07-IP3
        port_ion_control : True
        port_type : InstrumetPort
        port_oms_prefix : Instrument Port 2
@@ -33,6 +37,7 @@ port_configs:
        port_oms_port_cntl_id : '2'       
     J08-IP4:
        port_name : J08-IP4
+       port_stream_name : LPJBox_CI_Ben_Hall_Port_J08-IP4
        port_ion_control : True
        port_type : InstrumetPort
        port_oms_prefix : Instrument Port 3
