Updated rsn_platform_driver to include data colleted by nms to account for one stream per data item
Added more node config files

--- a/mi/platform/rsn/node_config_files/Pac_City_Facilities_Stream.yml
+++ b/mi/platform/rsn/node_config_files/Pac_City_Facilities_Stream.yml
@@ -1,22 +1,12 @@
 node_meta_data:
-    node_id_name: LPJBox_CI_Ben_Hall 
-    description: Low Power Junction Box for CI Testing Ben Hall
-    location: Ben Hall
-    node_type: JBox
-    reference_designator: LJ0CI    
-    nms_source : 0
-    oms_sample_rate : 3
+    node_id_name: Facilities Alarms 
+    description: Shore Station Facilities Alarms
+    location: Shore Station
+    node_type: Shore Station
+    reference_designator: na    
 port_info:
-    J05-IP1:
-       port_oms_port_cntl_id : '0'
-    J06-IP2:
-       port_oms_port_cntl_id : '1'
-    J07-IP3:
-       port_oms_port_cntl_id : '2'
-    J08-IP4:
-       port_oms_port_cntl_id : '3'
 node_streams:
-    lpjbox_ci_ben_hall_node_eng_data:
+    facilities:
         Ambient Temperature:
           monitor_cycle_seconds : 3
           scale_factor  : 0.001
