--- a/mi/platform/rsn/node_config_files/deep_profiler_pd01a.yml
+++ b/mi/platform/rsn/node_config_files/deep_profiler_pd01a.yml
@@ -1,11 +1,11 @@
-node_meta_data :
-    node_id_name: DeepProfilerSim 
-    description: Deep Profiler Simulator for Testing Ben Hall
+node_meta_data:
+    node_id_name: DeepProfilerSim
+    description: DeepProfilerSim
     location: Ben Hall
-    node_type: DP
-    reference_designator: DPSIM
+    node_type: Deep Profiler
+    reference_designator: PD01A   
     nms_source : 0
-    oms_sample_rate : 300
+    oms_sample_rate : 3
 port_info:
     J05-IP1:
        port_oms_port_cntl_id : '0'
@@ -16,41 +16,48 @@ port_info:
     J08-IP4:
        port_oms_port_cntl_id : '3'
 node_streams:
- deep_profiler_sim_dock_stream:
+  deep_profiler_sim_stream_deep_profiler_sim_dock_12_volt_current:
     Dock 12 Volt Current:
       ion_parameter_name: deep_profiler_sim_dock_12_volt_current
-      monitor_cycle_seconds: 10
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_dock_ambient_temperature:
     Dock Ambient Temperature:
       ion_parameter_name: deep_profiler_sim_dock_ambient_temperature
-      monitor_cycle_seconds: 10
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_dock_heat_sink_temperature:
     Dock Heat Sink Temperature:
       ion_parameter_name: deep_profiler_sim_dock_heat_sink_temperature
-      monitor_cycle_seconds: 10
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_dock_ips_status/control:
     Dock IPS Status/Control:
       ion_parameter_name: deep_profiler_sim_dock_ips_status/control
-      monitor_cycle_seconds: 10
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_dock_relative_humidity:
     Dock Relative Humidity:
       ion_parameter_name: deep_profiler_sim_dock_relative_humidity
-      monitor_cycle_seconds: 10
+      monitor_cycle_seconds: 3
       scale_factor: 1
- deep_profiler_mobile_platform_stream:
+  deep_profiler_sim_stream_deep_profiler_sim_mobile_profiler_battery_energy:
     Mobile Profiler Battery Energy:
       ion_parameter_name: deep_profiler_sim_mobile_profiler_battery_energy
-      monitor_cycle_seconds: 300
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_mobile_profiler_profile_number:
     Mobile Profiler Profile Number:
       ion_parameter_name: deep_profiler_sim_mobile_profiler_profile_number
-      monitor_cycle_seconds: 300
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_mobile_profiler_state:
     Mobile Profiler State:
       ion_parameter_name: deep_profiler_sim_mobile_profiler_state
-      monitor_cycle_seconds: 300
+      monitor_cycle_seconds: 3
       scale_factor: 1
+  deep_profiler_sim_stream_deep_profiler_sim_mobile_profiler_temperature_1:
     Mobile Profiler Temperature 1:
       ion_parameter_name: deep_profiler_sim_mobile_profiler_temperature_1
-      monitor_cycle_seconds: 300
+      monitor_cycle_seconds: 3
       scale_factor: 1
